Große Struktur Änderungen. Logger Removed. Asploit Style Implementiert.

--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -1,7 +1,11 @@
 default_server_path: "../Cloud/running/static"
 server_version: "paper-1.21.1-133.jar"
 
-log_level: "INFO"
-
 # Zeit in Sekunden, um nach dem Start zu prüfen, ob der Server online ist. Sollte in Zukunft Erhöht werden. Aktuell keine Funktion!
 server_check_delay: 10
+
+# Aktiviert Entwickler Nachrichten.
+debug_mode: false
+
+# EchoCloud Registriert Automatisch server aus dem Standart Server Pfad.
+autoregister: true
