--- a/.gitignore
+++ b/.gitignore
@@ -202,9 +202,11 @@ cython_debug/
 .cursorindexingignore
 
 # Marimo
-marimo/_static/
+marimo/_static/<
 marimo/_lsp/
 __marimo__/
 
 # Custom
 .idea/
+config/auth_tokens.yaml
+.pem
