Storage System (MySQL, MariaDB, PostgreSQL, H2). apimanager.py Test Routen.

--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -18,3 +18,18 @@ network:
   auth_config_path: "./config/auth_tokens.yaml"    # Pfad von auth_tokens.yaml
   cert_file_path: "./config/cert.pem"              # Pfad zum Zertifikat
   key_file_path: "./config/key.pem"                # Pfad zum Schlüssel des Zertifikats
+
+storage:
+  # Art der Speicherung:
+  # - "mysql"      (klassischer MySQL Server)
+  # - "mariadb"    (MySQL Fork, kompatibel)
+  # - "postgresql" (leistungsstark, für größere Projekte)
+  # - "h2"         (leichte Datei-Datenbank, kein Server nötig)
+  storage_type: "h2"
+  host: "localhost"          # Adresse deiner Datenbank (wird nur benötigt bei mysql, mariadb, postgresql)
+  port: 3306                 # Port Deiner Datenbank (MySQL/MariaDB: 3306, PostgreSQL: 5432)
+  username: "root"           # Benutzername für die Datenbank
+  password: "passwort"       # Passwort für die Datenbank
+  database: "EchoCloud"      # Datenbank Name
+  table_name: "json_storage" # Name des Tables wo EchoCloud Daten Speichert
+  h2_file_path: "../data/"   # Pfad zur H2 Jar
