--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ fastapi~=0.116.1
 rich~=14.0.0
 DateTime~=5.5
 cryptography~=44.0.2
+mysql~=0.0.3
+mysql-connector-python~=9.4.0
+psycopg2~=2.9.10
+JayDeBeApi~=1.2.3
