--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ DateTime~=5.5
 cryptography~=44.0.2
 mysql~=0.0.3
 mysql-connector-python~=9.4.0
-psycopg2~=2.9.10
+psycopg2-binary~=2.9.10
 JayDeBeApi~=1.2.3
