--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
+asyncio~=3.4.3
 uvicorn~=0.35.0
 PyYAML~=6.0.2
+redis~=6.4.0
+DateTime~=5.5
 fastapi~=0.116.1
 rich~=14.0.0
-DateTime~=5.5
 cryptography~=44.0.2
 mysql~=0.0.3
 mysql-connector-python~=9.4.0
-psycopg2-binary~=2.9.10
+psycopg2-binary~=2.9.10 # WARNUNG NUR BINARY !!!
 JayDeBeApi~=1.2.3
+jaydebeapi3~=0.0.0.1
